# spendly

./: .env.example  .gitignore  README.md  SETUP.md  main.py  pyproject.toml
app/: config.py  deps.py
app/api/: routes.py
app/bot/: handler.py
app/db/: repository.py
app/llm/: parser.py  prompts.py
app/models/: schemas.py
tests/: test_scenarios.py
