[project]
name = "memory-logger"
version = "0.1.0"
description = "Personal financial memory logger with LLM-powered natural language input"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "tinydb>=4.8.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.0",
    "python-telegram-bot>=21.0",
]
